# segment

./: CMakeLists.txt  README.md  burmese-word-list.txt  burmese.foma  burmese.fst  burmese.scr  burmese2.fst  burmese2.txt  experiment.py  generateFomaTemplate.py  generateGold.py  main.c  make.sh  mya-gold.txt  mya-input.txt  run.py  segment  template.txt
